# wgpu-shaders

./: .editorconfig  Cargo.toml  README.md
demo/: index.html
shadertoy/: Cargo.toml  build.rs
shadertoy/src/: lib.rs  main.rs  shader_list.rs  state.rs  uniform.rs
shadertoy/src/assets/: fragment.prefix.wgsl  fragment.suffix.wgsl
shadertoy/src/assets/toy/: default.wgsl  frac-rgb.wgsl  mandelbrot.wgsl  multi-ring.wgsl  neon.wgsl  red-green-gradient-center.wgsl  red-green-gradient.wgsl  rgb-neon-iter.wgsl  rgb-neon.wgsl  ring.wgsl  x-red-gradient.wgsl  y-green-gradient.wgsl
src/: camera.rs  lib.rs  main.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
wgpu-tuto/: Cargo.toml
wgpu-tuto/demo/: README.md  index.html
wgpu-tuto/src/: instance.rs  state.rs
