[package]
name = "wgpu-shaders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.10.0"
log = "0.4.18"
wgpu = "0.16.1"
winit = "0.28.6"

[target."cfg(target_arch = \"wasm32\")".dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = ["Document", "Window", "Element"] }
wgpu = { version = "0.16.1", features = ["webgl"] }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread"], default-features = false }
