[package]
name = "shadertoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
tokio = { workspace = true }

[build-dependencies]
glob = { version = "0.3.1", default-features = false }
