[package]
name = "wgpu-shaders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
cfg-if = { workspace = true }
cgmath = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[target."cfg(target_arch = \"wasm32\")".dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace= true }
wgpu = { workspace = true, features = ["webgl"] }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
tokio = { workspace = true }
